Make nav menu stay on top of carousel__controls and increase distance from window border to prevent it getting covered by potential scrollbars

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -183,12 +183,12 @@ h1, h2, h3, h4, h5, h6 {
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 4;
     background-image: linear-gradient(45deg, $brown, $light-brown);
     height: fit-content;
     border: 2px solid white;
     border-radius: 5px;
-    margin: 0.5em;
+    margin: 0.85em;
 }
 
 .toc {
